Fix end-day button/context pane overlap

--- a/src/Farmhand.sass
+++ b/src/Farmhand.sass
@@ -19,6 +19,7 @@
 
   .sidebar-wrapper
     display: flex
+    z-index: 20
 
   .sidebar
     background: $chrome-background
@@ -26,11 +27,6 @@
     padding: 1em
     position: relative
     width: $sidebar-width - 2em
-
-  .end-day
-    bottom: 1.5em
-    position: absolute
-    right: 1.5em
 
   .notifications-tr
     top: 4em !important
