--- a/src/components/Stage/Stage.sass
+++ b/src/components/Stage/Stage.sass
@@ -40,3 +40,8 @@
     .money-display
       position: absolute
       right: 1em
+
+  .end-day
+    bottom: 1.5em
+    position: absolute
+    right: 1.5em
